--- a/Kazakstan.html
+++ b/Kazakstan.html
@@ -28,7 +28,7 @@
       
         <div class="mySlides">
           <div class="numbertext">2 / 6</div>
-            <img src="imggallery/kz1.jpg" style="width:100%">
+            <img src="../imggallery/kz1.jpg" style="width:100%">
         </div>
       
         <div class="mySlides">
